lab1/Test/L1-A-13-60.output
Error Type B at Line 2
Error Type A at Line 4
Error Type B at Line 15
Error Type B at Line 19
Error Type B at Line 27
Error Type A at Line 29
Error Type B at Line 30
Error Type A at Line 35
Error Type B at Line 41
