lab1/Test/L1-A-13-60.cmm
int d4l6S6_dqsiON ( ) {
  float Ok5Rm7zHNvFLtp [ ] ;
  return HUHJDpVq1y == MgHjbgcl2VPX - qkY971df4U33_gw 
    [ rudQJagru `= rmKfqlIQIrz0LDtsy || VLDv_bHYRUONx6Yf 
    && UNOfl4 > UYmVzokdRmum * ! - dPJUV6J_YhGZIKJEgI 
    ( qxFD7SWy9hr || ALi13Gf7lFAXSS + ( lo5bGzkn != p 
    - EVO2oA ( Usq8o6qiGJIv3BO9 , iGxPCx <= ( gKzI7npHh8iHzUY 
    = R8770 >= vKY6cKr6 ) - 1404483318 ) ) < ZIYoaSZ8zBBoXrNbWp7 
    + 1018367535.1495890001 . aIvUOoX8kEumQNx / - lFw3anzxa2ksbf 
    ( ) ) ] ;
}
struct hPibeiLeTqTotxQTrt ;
int hDqxEfhvu 
;
struct ;r6Tgvp {
  struct UIS3lkQO kt9DTaI8NTCBrVYiyL , wtz3OYCmOSP_Te 
    , F8XYw1GbOvkzcP = SQmkCmG_Y ;
};
;
struct {
}UYmkBXecaRJ8rO5 , UScY7nbGwF26L4VU 

;
int ;
int lqfbYnKSUGtMbV5x ( int dwhqYTtfFVYbc , int hkASUEUPigaU 
  ) {
  ;
  fJtXDgKNXR3aJ1IKaIyz ;
  if ( ybuG ) &  pOhmPa ;
else   if ( WfdN )   if int ( mbKk6aTuCTDIZ ) {
    if ( NLXEsaEJcQp_n )     EGXejiuMD6K ;
else     while ( fsRwg )     fXc4ew_4iFKi2UK_pKv ;


'  }else   if ( KJ_ )   wprqhqgu9zkmIC8rF1 ;




}
int == k4LJ ( int D5OQ ) {
}
